--- a/package.json
+++ b/package.json
@@ -7,10 +7,14 @@
     "index.js"
   ],
   "scripts": {
-    "test": "jest"
+    "test": "npm run lint && npm run test-only",
+    "test-only": "jest",
+    "fix": "zenflow-lint-js --fix",
+    "lint": "zenflow-lint-js"
   },
   "devDependencies": {
-    "jest": "^21.2.1"
+    "jest": "^21.2.1",
+    "zenflow-lint-js": "^1.0.0"
   },
   "author": {
     "name": "Matthew Francis Brunetti",
